--- a/fklearn_vs_sklearn.ipynb
+++ b/fklearn_vs_sklearn.ipynb
@@ -300,7 +300,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "369 µs ± 2.89 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "426 µs ± 18.4 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -404,26 +404,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'fklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-5ce64865cdb9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mfklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtraining\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mregression\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mlinear_regression_learner\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'fklearn'"
+     ]
+    }
+   ],
    "source": [
     "from fklearn.training.regression import linear_regression_learner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.01 ms ± 21.6 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "learner = linear_regression_learner(features = boston.feature_names,target = \"Target_INCOME\")\n",
@@ -432,12 +436,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "learner = linear_regression_learner(features = boston.feature_names,target = \"Target_INCOME\")\n",
-    "predict_fn, pred_train, log = learner(boston_df)"
+    "predict_fn, pred_train, log = learner(boston_df)\n",
+    "log"
    ]
   },
   {
@@ -450,9 +455,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv-funcional",
+   "display_name": "funcional",
    "language": "python",
-   "name": "venv-funcional"
+   "name": "funcional"
   },
   "language_info": {
    "codemirror_mode": {
